--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.cloudwalk.flightclub"
-    android:versionCode="16"
-    android:versionName="0.4.1" >
+    android:versionCode="17"
+    android:versionName="0.4.2" >
 
     <uses-sdk android:minSdkVersion="9"/>
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
