--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
     android:versionCode="20"
     android:versionName="0.4.5" >
 
-    <uses-sdk android:minSdkVersion="9"/>
+    <uses-sdk android:minSdkVersion="9" />
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -24,6 +24,7 @@
         android:anyDensity="true"
         android:largeScreens="true"
         android:normalScreens="true"
+        android:resizeable="true"
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
@@ -31,7 +32,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.Light.NoTitleBar.Fullscreen" >
+        android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -60,15 +61,11 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity
-            android:name=".Preferences"
-            android:label="Preferences"
-            android:screenOrientation="landscape"
-            android:theme="@android:style/Theme.Light" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+            android:name="com.cloudwalk.flightclub.Preferences"
+            android:exported="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="Flight Club"
+            android:theme="@style/PreferenceTheme" >
         </activity>
         <activity
             android:name=".ScoreActivity"
