--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+    
     <uses-feature
         android:name="android.hardware.telephony"
         android:required="false" />
